--- a/css/index.css
+++ b/css/index.css
@@ -1,109 +1,168 @@
 .naviagtionbar {
-display: inline-block;
-position: relative;
-margin-top: auto;
-text-align: center;
-background-color: rgb(53, 51, 51);
-width: 100%;
-height: 50px;
-}
-
-h1 {
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-weight: 300;
-}
-
-h2 {
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-weight: 700;
-}
-
-.casestudies {
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 12px;
-font-weight: 100;
-color: white;
-float: right;
-margin-top: 0px;
-padding-right: 25px;
-}
-
-.about {
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 12px;
-color: white;
-float: right;
-margin-top: 0px;
-padding-right: 25px;
-}
-
-.resume {
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 12px;
-color: white;
-float: right;
-margin-top: 0px;
-padding-right: 25px;
-}
-
-.contact {
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 12px;
-color: white;
-float: right;
-margin-top: 0px;
-padding-right: 25px;
-}
-
-.sitename {
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 12px;
-font-weight: 900;
-color: white;
-float: left;
-margin-top: 0px;
-padding-left: 25px;
-}
-
-p {
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 60px;
-font-weight: 35;
-float: inline-start;
-width: 60%;
-padding-left: 60px;
-padding-top: 150px;
-}
-  
-
-.mainphoto {
-height: 780px;
-width: 500px;
-float: right;
-padding: 25px;
-}
-
-.sections {
-position: absolute;
-background-position: center;
-height:500px;
-width: 85%;
-padding-top: 900px;
-}
-
-.featuredprojects {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 60px;
-  font-weight: 35;
-  float: inline-end;
-  width: 60%;
-  padding-left: 60px;
-  padding-top: 150px;
+  display: inline-block;
+  position: relative;
+  margin-top: auto;
+  text-align: center;
+  background-color: rgb(53, 51, 51);
+  width: 100%;
+  height: 50px;
   }
-
-.openingstatement {
-position: absolute;
-background-position: center;
-background-color: rgb(218, 209, 198);
-}
-
+  
+  h1 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 300;
+  }
+  
+  h2 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  }
+  
+  h3 {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
+  }  
+  
+  .casestudies {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12px;
+  font-weight: 100;
+  color: white;
+  float: right;
+  margin-top: 0px;
+  padding-right: 25px;
+  }
+  
+  .about {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12px;
+  color: white;
+  float: right;
+  margin-top: 0px;
+  padding-right: 25px;
+  }
+  
+  .resume {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12px;
+  color: white;
+  float: right;
+  margin-top: 0px;
+  padding-right: 25px;
+  }
+  
+  .contact {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12px;
+  color: white;
+  float: right;
+  margin-top: 0px;
+  padding-right: 25px;
+  }
+  
+  .sitename {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12px;
+  font-weight: 900;
+  color: white;
+  float: left;
+  margin-top:auto;
+  padding-left: 2px;
+  }
+  
+  .img-logo {
+    width: 17%;
+    display: block;
+    float: left;
+    margin-top: auto;
+    padding-left: 25px;
+  }
+  
+  p {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 40px;
+  font-weight: 35;
+  float: inline-start;
+  width: fit-content;
+  padding-left: 60px;
+  padding-top: 140px;
+  }
+    
+  
+  .mainphoto {
+  height: 780px;
+  width: 500px;
+  float: right;
+  padding: 25px;
+  }
+  
+  .projects {
+  position: relative;
+  background-position: center;
+  width: 100%;
+  padding-top: 2%;
+  }
+  
+  .tools {
+  position: relative;
+  background-position: center;
+  width: 100%;
+  padding-top: 5%;
+  }
+  
+  .designprocess {
+  position: relative;
+  background-position: center;
+  width: 100%;
+  padding-top: 5%;
+  }
+  
+  .openingstatement {
+  background-size: unset;
+  background-position: center;
+  background-color: rgb(218, 209, 198);
+  } 
+  
+  .img-desinator {
+    width: fit-content;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .img-hfh {
+    width: fit-content;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .img-pal {
+    width: fit-content;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .img-tools {
+    width: fit-content;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .img-designprocess {
+    width: fit-content;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  
+    .footer {
+      display: block;
+      line-height: auto;
+      background-position: center;
+      margin: auto;
+      color: white;
+      background-color: rgb(91, 86, 86);
+      } 
